изменения в порядке работ, корректировки

--- a/labs/lab12/index.html
+++ b/labs/lab12/index.html
@@ -49,61 +49,23 @@
     <div class="general">
 
     <div class="content">
-    <p class="section">Лабораторная работа №12</p>
-    <p class="lr-info">Темы: <a target="_blank" href="../../examples/redux/usage-with-react/index.html">Использование Redux с React</a><br>
-    Время выполнения: 2 часа</p>
-    <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>Catalog</mark>, разработанный в лабораторной работе №9.</p>
-
-    <p class="section">Задание 1</p>
-    <p>Модифицируйте компонент каталога товаров <mark>Catalog</mark>, добавив каждому товару кнопку для добавления его в корзину и информацию о массе.</p>
-    <p>Реализуйте компонент <mark>OrderForm</mark> — многостраничный диалог оформления заказа в интернет-магазине. Структура компонента:</p>
-    <ul>
-        <li>Индикатор выполнения <mark>ProgressBar</mark>, показывающий, на какой странице клиент находится.</li>
-        <li>1 страница:
-            <ul>
-                <li>Список товаров, добавленных в корзину. У каждого товара есть:
-                    <ul>
-                        <li>чекбокс, при помощи которого товар можно не добавлять в заказ;</li>
-                        <li>поле для ввода количества товаров, которые клиент хочет заказать (проверьте, есть ли столько товаров на складе);</li>
-                        <li>кнопка для удаления из корзины.</li>
-                    </ul>
-                </li>
-                <li>Общая стоимость товаров в заказе со скидками и без них.</li>
-                <li>Кнопка для перехода к следующей странице.</li>
-            </ul>
-        </li>
-        <li>2 страница:
-            <ul>
-                <li>Радиокнопки для выбора способа доставки:
-                    <ul>
-                        <li>курьером (если стоимость заказа меньше 200 рублей, то стоимость 10 рублей, если больше, то бесплатно),</li>
-                        <li>почтой (5 рублей за каждый килограмм массы),</li>
-                        <li>самовывоз (бесплатно).</li>
-                    </ul>
-                </li>
-                <li>Текстовое поле для указания адреса доставки. Неактивно, если выбран самовывоз.</li>
-                <li>Радиокнопки для выбора способа оплаты:
-                    <ul>
-                        <li>наличными,</li>
-                        <li>банковской картой,</li>
-                        <li>банковским переводом.</li>
-                    </ul>
-                </li>
-                <li>Кнопки для перехода к следующей и предыдущей страницам.</li>
-            </ul>
-        </li>
-        <li>3 страница:
-            <ul>
-                <li>Список добавленных в заказ товаров без возможности изменения.</li>
-                <li>Общая стоимость заказа с учётом стоимости доставки.</li>
-                <li>Выбранные способы доставки и оплаты.</li>
-                <li>Адрес доставки, если был указан.</li>
-                <li>Кнопки для перехода к предыдущей странице и для подтверждения заказа.</li>
-            </ul>
-        </li>
-    </ul>
-
-    <p>Для работы с деревом состояния используйте хранилище Redux.</p>
+        <p class="section">Лабораторная работа №12</p>
+        <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/portals/index.html">Порталы</a>, <a target="_blank" href="../../examples/redux/introduction/index.html">Введение в Redux</a>, <a target="_blank" href="../../examples/redux/actions/index.html">Действия</a>, <a target="_blank" href="../../examples/redux/reducers/index.html">Редюсеры</a>, <a target="_blank" href="../../examples/redux/store/index.html">Хранилище</a>, <a href="../../examples/redux/data-flow/index.html">Поток данных</a><br>
+            Время выполнения: 2 часа</p>
+        <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>Catalog</mark>, улучшенный в лабораторной работе №12 и <mark>SignUpForm</mark>, улучшенный в лабораторной работе №10.</p>
+        <p class="section">Задание 1</p>
+        <p>Модифицируйте компонент каталога товаров <mark>Catalog</mark>, добавив каждому товару кнопку для добавления его в корзину.</p>
+        <p>При нажатии на кнопку добавления в корзину выведите, используя портал, модальное окно с уведомлением о том, что товар был успешно добавлен в корзину, а также добавьте запись об этом товаре в хранилище Redux. Модальное окно должно содержать:</p>
+        <ul>
+            <li>название товара,</li>
+            <li>стоимость,</li>
+            <li>колчество товаров в корзине,</li>
+            <li>суммарная стоимость товаров в корзине,</li>
+            <li>кнопки «Перейти к оформлению заказа» (пока не функциональна) и «Продолжить просмотр товаров» (закрывает модальное окно).</li>
+        </ul>
+        
+        <p class="section">Задание 2</p>
+        <p>Создайте компонент формы авторизации <mark>SignInForm</mark>, содержащий поля для ввода адреса электронной почты и пароля. Интегрируйте его с компонентом <mark>SignUpForm</mark>. Если регистрация прошла успешно, поместите данные об аккаунте пользователя в хранилище Redux и предложите пользователю ввести адрес почты и пароль для входа. Если введённые адрес почты и пароль совпадают со значениями в хранилище, выведите сообщение о том, что вход прошёл успешно, если же не совпадают, сообщите об этом и предложите ввести их заново.</p>
 
     </div>
     <div class="site-nav">
