--- a/labs/lab13/index.html
+++ b/labs/lab13/index.html
@@ -49,21 +49,61 @@
     <div class="general">
 
     <div class="content">
-        <p class="section">Лабораторная работа №13</p>
-        <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/portals/index.html">Порталы</a><br>
-            Время выполнения: 2 часа</p>
-        <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>Catalog</mark>, улучшенный в лабораторной работе №12.</p>
-        <p class="section">Задание 1</p>
-        <p>При добавлении товара в корзину выведите модальное окно с уведомлением о том, что товар был успешно добавлен в корзину. Модальное окно должно содеражать:</p>
-        <ul>
-            <li>название товара,</li>
-            <li>стоимость,</li>
-            <li>колчество товаров в корзине,</li>
-            <li>суммарная стоимость товаров в корзине,</li>
-            <li>кнопки «Перейти к оформлению заказа» и «Продолжить просмотр товаров».</li>
-        </ul>
-        <p>Используйте для этого порталы.</p>
+    <p class="section">Лабораторная работа №13</p>
+    <p class="lr-info">Темы: <a target="_blank" href="../../examples/redux/usage-with-react/index.html">Использование Redux с React</a><br>
+    Время выполнения: 2 часа</p>
+    <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>Catalog</mark>, разработанный в лабораторной работе №9.</p>
 
+    <p class="section">Задание 1</p>
+    <p>Модифицируйте компонент каталога товаров <mark>Catalog</mark>, добавив каждому товару информацию о массе.</p>
+    <p>Реализуйте компонент <mark>OrderForm</mark> — многостраничный диалог оформления заказа в интернет-магазине. Структура компонента:</p>
+    <ul>
+        <li>Индикатор выполнения <mark>ProgressBar</mark>, показывающий, на какой странице клиент находится.</li>
+        <li>1 страница:
+            <ul>
+                <li>Список товаров, добавленных в корзину. У каждого товара есть:
+                    <ul>
+                        <li>чекбокс, при помощи которого товар можно не добавлять в заказ;</li>
+                        <li>поле для ввода количества товаров, которые клиент хочет заказать (проверьте, есть ли столько товаров на складе);</li>
+                        <li>кнопка для удаления из корзины.</li>
+                    </ul>
+                </li>
+                <li>Общая стоимость товаров в заказе со скидками и без них.</li>
+                <li>Кнопка для перехода к следующей странице.</li>
+            </ul>
+        </li>
+        <li>2 страница:
+            <ul>
+                <li>Радиокнопки для выбора способа доставки:
+                    <ul>
+                        <li>курьером (если стоимость заказа меньше 200 рублей, то стоимость 10 рублей, если больше, то бесплатно),</li>
+                        <li>почтой (5 рублей за каждый килограмм массы),</li>
+                        <li>самовывоз (бесплатно).</li>
+                    </ul>
+                </li>
+                <li>Текстовое поле для указания адреса доставки. Неактивно, если выбран самовывоз.</li>
+                <li>Радиокнопки для выбора способа оплаты:
+                    <ul>
+                        <li>наличными,</li>
+                        <li>банковской картой,</li>
+                        <li>банковским переводом.</li>
+                    </ul>
+                </li>
+                <li>Кнопки для перехода к следующей и предыдущей страницам.</li>
+            </ul>
+        </li>
+        <li>3 страница:
+            <ul>
+                <li>Список добавленных в заказ товаров без возможности изменения.</li>
+                <li>Общая стоимость заказа с учётом стоимости доставки.</li>
+                <li>Выбранные способы доставки и оплаты.</li>
+                <li>Адрес доставки, если был указан.</li>
+                <li>Кнопки для перехода к предыдущей странице и для подтверждения заказа.</li>
+            </ul>
+        </li>
+    </ul>
+
+    <p>Для работы с деревом состояния используйте хранилище Redux.</p>
 
     </div>
     <div class="site-nav">
