--- a/labs/lab15/index.html
+++ b/labs/lab15/index.html
@@ -54,23 +54,24 @@
     <p>В данной лабораторной работе вам нужно будет объединить разработанные ранее компоненты в Интернет-магазин.</p>
     <p>Вам понадобятся следующие компоненты:</p>
     <ul>
-        <li>Каталог</li>
-        <li>Компонент навигации</li>
-        <li>Поиск по товарам</li>
-        <li>Форма регистрации</li>
-        <li>Форма авторизации</li>
-        <li>Форма оформления заказа</li>
+        <li><mark>Catalog</mark></li>
+        <li><mark>Search</mark></li>
+        <li><mark>SignUpForm</mark></li>
+        <li><mark>SignInForm</mark></li>
+        <li><mark>OrderForm</mark></li>
     </ul>
-        <p><mark class="gatsby-code-text">На странице Каталога</mark> вам необходимо объединить компоненты:</p>
+    
+    <p>Создайте навигационное меню <mark>NavBar</mark>, содержащее название магазина и кнопки для перехода на страницы:</p>
     <ul>
-        <li>Каталог</li>
-        <li>Компонент навигации</li>
-        <li>Поиск по товарам</li>
+        <li>Каталог,</li>
+        <li>Вход/регистрация (если пользователь уже вошёл, не отображается),</li>
+        <li>Корзина (рядом отобразите количество товаров в корзине).</li>
     </ul>
-        <p><mark class="gatsby-code-text">На странице Авторизации</mark> вам необходимо объединить форму регистрации и форму авторизации.</p>
-        <p><mark class="gatsby-code-text">На странице Оформления заказа</mark> вам необходимо объединить компонент оформления заказа и компонент навигации.</p>
+    
+    <p><mark class="gatsby-code-text">На странице Каталога</mark> объедините компоненты каталога <mark>Catalog</mark> и поиска по товарам <mark>Search</mark></p>
+    <p><mark class="gatsby-code-text">На странице Авторизации</mark> поместите компоненты <mark>SignInForm</mark> и <mark>SignUpForm</mark>. Сделайте переход от одного к другому при помощи клика по ссылкам «Нет аккаунта? Зарегистрируйтесь» и «Уже зарегистрированы? Войдите».</p>
+    <p><mark class="gatsby-code-text">На странице Оформления заказа</mark> поместите компонент <mark>OrderForm</mark>.</p>
     <p>Все компоненты на всех страницах должны использовать единое хранилище Redux.</p>
-    <p>Компонент регистрации должен добавлять новую запись, а компонент авторизации должен проверять наличие такой пары логина и пароля (электронная почта + пароль). При отсутствии данных в хранилище или если пароль не верен выдавать ошибку.</p>
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
