--- a/labs/lab10/index.html
+++ b/labs/lab10/index.html
@@ -50,7 +50,7 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №10</p>
-    <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes </a>, <a target="_blank" href="../../examples/advanced/integrating-with-lib/index.html">Интеграция со сторонними библиотеками</a><br>
+    <p class="lr-info">Темы: <a target="_blank" href="../../examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes</a>, <a target="_blank" href="../../examples/advanced/integrating-with-lib/index.html">Интеграция со сторонними библиотеками</a><br>
     Время выполнения: 2 часа</p>
     <p>Для выполнения этой лабораторной работы вам понадобятся компоненты <mark>SignUpForm</mark>, разработанный в лабораторной работе №5, и <mark>SortTable</mark>, модифицированный в лабораторной работе №9.</p>
     <p class="section">Задание 1</p>
@@ -69,8 +69,8 @@
     <p>Например: фамилию, имя, отчество можно проверить с помощью React.PropTypes.string.</p>
 
     <p class="section">Задание 2</p>
-    <p>Создайте компонент поиска <mark>Search</mark> по уже существующему каталогу товаров, разработанному в предыдущей лабораторной работе. Компонент <mark>Search</mark> должен обращаться к компоненту <mark>SortTable</mark> содержащему всю информацию и товарах.</p>
-    <p>Реализовать возможность поиска с точным и частичным совпадением по наименованию товара, в зависимости от выбранного параметра.</p>
+    <p>Создайте компонент поиска <mark>Search</mark> по уже существующему каталогу товаров, разработанному в предыдущей лабораторной работе. Компонент <mark>Search</mark> должен обращаться к компоненту <mark>SortTable</mark>, содержащему всю информацию и товарах.</p>
+    <p>Реализуйте возможность поиска с точным и частичным совпадением по наименованию товара, в зависимости от выбранного параметра.</p>
     <p>В результате поискового запроса <span class="gatsby-code-text">должна быть выведена следующая информация</span>:</p>
     <ul>
         <li>наименование товара,</li>
