--- a/labs/lab15/index.html
+++ b/labs/lab15/index.html
@@ -70,7 +70,7 @@
     
     <p><mark class="gatsby-code-text">На странице Каталога</mark> объедините компоненты каталога <mark>Catalog</mark> и поиска по товарам <mark>Search</mark></p>
     <p><mark class="gatsby-code-text">На странице Авторизации</mark> поместите компоненты <mark>SignInForm</mark> и <mark>SignUpForm</mark>. Сделайте переход от одного к другому при помощи клика по ссылкам «Нет аккаунта? Зарегистрируйтесь» и «Уже зарегистрированы? Войдите».</p>
-    <p><mark class="gatsby-code-text">На странице Оформления заказа</mark> поместите компонент <mark>OrderForm</mark>.</p>
+    <p><mark class="gatsby-code-text">На странице Оформления заказа</mark> поместите компонент <mark>OrderForm</mark>. Перенаправьте пользователя на эту страницу при нажатии на кнопку «Перейти к оформлению заказа» в модальном окне, которое появлется при добавлении товара в корзину.</p>
     <p>Все компоненты на всех страницах должны использовать единое хранилище Redux.</p>
     </div>
     <div class="site-nav">
