Содержание для справочника

--- a/info/cmd_install/index.html
+++ b/info/cmd_install/index.html
@@ -40,35 +40,71 @@
     </section>
     <div class="general">
 
-    <div class="content">
-        <p class="section">Установка Командной строки</p>
-        <p>В операционной системе Microsoft Windows есть предустановленный терминал, который называется cmd.exe. Использовать его в качестве основного терминала не рекомендуется, так как его возможности не так широки, как у аналогов. Для стандартного терминала Windows существует две альтернативы в виде эмуляторов консоли под названием cmder и Windows Terminal.</p>
-        <p class="section-title-left">О эмуляторах</p>
-        <p><b>Windows Terminal</b> — приложение Терминал от Microsoft. Предлагает вкладочный интерфейс и объединяет инструменты Командная строка (CMD), PowerShell, Azure Cloud Shell и Подсистема Windows для Linux (WSL)</p>
-        <img src="win_terminal.png" alt="Windows Terminal">
-        <p><b>Cmder</b> — это эмулятор консоли, который отличается простотой и удобством работы. В отличие от стандартной командной строки cmd в Windows, данная программа предоставляет больше функционала, а ее интерфейс удобнее и привлекательнее. По сути, Cmder — это целый программный пакет, который включает командную строку, консоль, макрос и DosBox.</p>
-        <img src="cmder.jpg" alt="cmder">
-        <p class="section">Установка CMDER</p>
-        <p>Скачать cmder можно на официальном сайте <a href="http://cmder.net/">http://cmder.net/</a>.</p>
-        <img src="cmder1.png" alt="Официальный сайт cmder">
-        <p>На сайте есть две версии для скачивания: минимальная и полная.</p>
-        <img src="cmder2.png" alt="Скачиваем cmder">
-        <p>Полная отличается от минимальной тем, что в неё вшита поддержка системы контроля версий git. Скачиваем необходимую версию в виде архива и распаковываем его. Cmder не требует установки. Достаточно запустить файл «cmder.exe».</p>
-        <p>Запущенная командная строка cmder должна выглядеть следующим образом.</p>
-        <img src="cmder3.png" alt="">
-        <p>В вашем случае внешний вид может отличаться, в зависимости от настроек системы.</p>
-        <p class="section">Установка Windows Terminal</p>
-        <p>На данный момент Windows Terminal уже можно установить через магазин приложений Microsoft Store. Чтобы запустить данный магазин откройте меню «Пуск», введите в поиск слово «store» и запустите найденную программу.</p>
-        <img src="win_terminal1.png" alt="Windows Terminal Search">
-        <p>После запуска Microsoft Store, в нем нужно найти приложение Windows Terminal (Preview). Для этого можно воспользоваться поиском по магазину приложений. Введите в поисковую строку слово «terminal» и нажмите на верхнее приложение.</p>
-        <img src="win_terminal2.png" alt="Windows Terminal Store">
-        <p>Если с поиском возникают трудности, то можете воспользоваться <a target="_blank" href="https://www.microsoft.com/ru-ru/p/windows-terminal-preview/9n0dx20hk701">веб-версией магазина Microsoft</a>. Здесь нужно будет нажать на кнопку «Получить» и подтвердить переход в приложение.</p>
-        <img src="win_terminal3.png" alt="Windows Terminal Web-Store">
-        <p>Так или иначе, вы попадете в Microsoft Store на страницу приложения Windows Terminal (Preview). Здесь нужно нажать на кнопку «Install» и дождаться завершения установки приложения.</p>
-        <img src="win_terminal4.png" alt="Windows Terminal Web-Store Download">
-        <p>После установки можно сразу начинать пользоваться Windows Terminal, перезагрузка компьютера не требуется. Чтобы запустить приложение нужно нажать на кнопку «Launch» в Microsoft Store или воспользоваться поиском в меню «Пуск».</p>
-    </div>
+        <div class="content">
+            <p class="section">Установка Командной строки</p>
+            <p>В операционной системе Microsoft Windows есть предустановленный терминал, который называется cmd.exe. Использовать его в качестве основного терминала не рекомендуется, так как его возможности не так широки, как у аналогов. Для стандартного терминала Windows существует две альтернативы в виде эмуляторов консоли под названием cmder и Windows Terminal.</p>
+            <p class="section-title-left">О эмуляторах</p>
+            <p><b>Windows Terminal</b> — приложение Терминал от Microsoft. Предлагает вкладочный интерфейс и объединяет инструменты Командная строка (CMD), PowerShell, Azure Cloud Shell и Подсистема Windows для Linux (WSL)</p>
+            <img src="win_terminal.png" alt="Windows Terminal">
+            <p><b>Cmder</b> — это эмулятор консоли, который отличается простотой и удобством работы. В отличие от стандартной командной строки cmd в Windows, данная программа предоставляет больше функционала, а ее интерфейс удобнее и привлекательнее. По сути, Cmder — это целый программный пакет, который включает командную строку, консоль, макрос и DosBox.</p>
+            <img src="cmder.jpg" alt="cmder">
+            <p class="section">Установка CMDER</p>
+            <p>Скачать cmder можно на официальном сайте <a href="http://cmder.net/">http://cmder.net/</a>.</p>
+            <img src="cmder1.png" alt="Официальный сайт cmder">
+            <p>На сайте есть две версии для скачивания: минимальная и полная.</p>
+            <img src="cmder2.png" alt="Скачиваем cmder">
+            <p>Полная отличается от минимальной тем, что в неё вшита поддержка системы контроля версий git. Скачиваем необходимую версию в виде архива и распаковываем его. Cmder не требует установки. Достаточно запустить файл «cmder.exe».</p>
+            <p>Запущенная командная строка cmder должна выглядеть следующим образом.</p>
+            <img src="cmder3.png" alt="">
+            <p>В вашем случае внешний вид может отличаться, в зависимости от настроек системы.</p>
+            <p class="section">Установка Windows Terminal</p>
+            <p>На данный момент Windows Terminal уже можно установить через магазин приложений Microsoft Store. Чтобы запустить данный магазин откройте меню «Пуск», введите в поиск слово «store» и запустите найденную программу.</p>
+            <img src="win_terminal1.png" alt="Windows Terminal Search">
+            <p>После запуска Microsoft Store, в нем нужно найти приложение Windows Terminal (Preview). Для этого можно воспользоваться поиском по магазину приложений. Введите в поисковую строку слово «terminal» и нажмите на верхнее приложение.</p>
+            <img src="win_terminal2.png" alt="Windows Terminal Store">
+            <p>Если с поиском возникают трудности, то можете воспользоваться <a target="_blank" href="https://www.microsoft.com/ru-ru/p/windows-terminal-preview/9n0dx20hk701">веб-версией магазина Microsoft</a>. Здесь нужно будет нажать на кнопку «Получить» и подтвердить переход в приложение.</p>
+            <img src="win_terminal3.png" alt="Windows Terminal Web-Store">
+            <p>Так или иначе, вы попадете в Microsoft Store на страницу приложения Windows Terminal (Preview). Здесь нужно нажать на кнопку «Install» и дождаться завершения установки приложения.</p>
+            <img src="win_terminal4.png" alt="Windows Terminal Web-Store Download">
+            <p>После установки можно сразу начинать пользоваться Windows Terminal, перезагрузка компьютера не требуется. Чтобы запустить приложение нужно нажать на кнопку «Launch» в Microsoft Store или воспользоваться поиском в меню «Пуск».</p>
+        </div>
+        <div class="site-nav">
+            <div class="site-nav-scroll">
+                <ul class="site-nav-list">
+                    <p class="site-nav-name">Справочник</p>
+                    <li><a href="index.html">Установка Командной строки</a></li>
+                    <li><a href="../node_js_install/index.html">Установка Node.js</a></li>
+                    <li><a href="../create_react_app/index.html">Создание React приложения (NPX, NPM, YARN)</a></li>
+                    <li><a href="../react_router/index.html">Что такое React Router и для чего он нужен?</a></li>
+                </ul>
+                <script type="text/babel" src="../../libraries/navigator.js"></script>
+                <script>
+                    $(document).ready(function() {
+                        $('.site-nav-list a[href="index.html"]').parent().toggleClass('site-nav-list-active');
+                    });
 
+                    function handleResize() {
+                        if ($(document.body).width() < 799) {
+                            $('.site-nav-scroll')
+                                .css('height', $('.site-nav-list').height() + 40)
+                                .css('overflow-y', 'hidden');
+                        } else {
+                            $('.site-nav-scroll').css('height', '');
+                            $('.site-nav-scroll').height($('.content').height());
+                            if ($('.site-nav-list').outerHeight() > $('.site-nav-scroll').innerHeight()) {
+                                $('.site-nav-scroll').css('overflow-y', 'scroll');
+                            } else {
+                                $('.site-nav-scroll').css('overflow-y', 'hidden');
+                            }
+                        }
+                    }
+                    $(function() {
+                        document.body.onresize = handleResize;
+                        handleResize();
+                    });
+                </script>
+            </div>
+        </div>
 </body>
 
 </html>
